--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -1947,85 +1947,172 @@
    "cell_type": "markdown",
    "id": "a217d277-6389-430a-8ca0-5b7b9fb8f18d",
    "metadata": {},
-   "source": []
+   "source": [
+    "**For real matrices, complex $\\lambda$'s and $x$'s come in \"conjugate pairs.\"**\n",
+    "$$\\text{If }Ax=\\lambda x \\text{ then } A\\bar{x}=\\bar{\\lambda}\\bar{x}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc4f0608-0f39-4877-9253-b8851a6802c3",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "dcff78f7-fff2-4161-afb1-f60d71ad8888",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex3)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "73d782ab-4838-4ab8-9831-a2aed7c61ff3",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$A=\\begin{bmatrix}{\\cos \\theta} &{-\\sin \\theta}\\\\{\\sin \\theta} &{\\cos \\theta} \\end{bmatrix} \\text{ has } \\lambda_1=\\cos \\theta + i \\sin \\theta \\text{ and } \\lambda_2 \\cos \\theta -i\\sin \\theta$$\n",
+    "\n",
+    "$$\\text{This is } \\lambda x \\text{   } Ax=\\begin{bmatrix} {\\cos \\theta}&{-\\sin \\theta}\\\\{\\sin \\theta}&{\\cos \\theta}\\end{bmatrix}\\begin{bmatrix}{1}\\\\{-i}\\end{bmatrix}=(\\cos \\theta + i \\sin \\theta) \\begin{bmatrix}{1}\\\\{-i}\\end{bmatrix})$$\n",
+    "\n",
+    "$$\\text{This is } \\bar{\\lambda}\\bar{x} \\text{   } A\\bar{x}=\\begin{bmatrix} {\\cos \\theta}&{-\\sin \\theta}\\\\{\\sin \\theta}&{\\cos \\theta}\\end{bmatrix}\\begin{bmatrix}{1}\\\\{i}\\end{bmatrix}=(\\cos \\theta - i \\sin \\theta) \\begin{bmatrix}{1}\\\\{i}\\end{bmatrix})$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "66a98b5c-7eb6-418f-925c-4d8a8f31485d",
    "metadata": {},
-   "source": []
+   "source": [
+    "**For this rotation matrix the absolute value is $|\\lambda|=1$, because $|cos^2 \\theta + \\sin^2 \\theta = 1$. This fact $|\\lambda| = 1$ holds for the eigenvalues of every orthogonal matrix.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd41d574-d5e6-4487-8523-ed90aba1f6e9",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "42a88c39-00e0-4363-b9c9-9e499f40b990",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Eigenvalues versus Pivots"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f85b2510-6083-442c-a6d8-437806e12088",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$product of pivots = determinant = product of eigenvalues.$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "a4e53ffc-f37c-4847-a1cb-bf84c847c0ed",
    "metadata": {},
-   "source": []
+   "source": [
+    "We are assuming a full set of pivots d 1, ... , dn. There are n real eigenvalues AI, ... , An. The d's and A'S are not the same, but they come from the same matrix. This paragraph is about a hidden relation. For symmetric matrices the pivots and the eigenvalues have the same signs: \n",
+    "- **The number of positive eigenvalues of $A = A^T$ equals the number of positive pivots. Special case: $A$ has all $\\lambda_i > 0$ if and only if all pivots are positive.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "039ba89b-d6f1-4be7-900a-baab27ced688",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "59c25268-5080-4ed3-8311-1b37c4ebf820",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex4)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8ad9ab06-b4eb-40ba-acfe-6e4594f3ae4d",
    "metadata": {},
-   "source": []
+   "source": [
+    "The signs of the pivots match the signs of the eigenvalues, one plus and one minus. This could be false when the matrix is not symmetric.\n",
+    "- 대칭 행렬에서 pivot이 둘 중 한 개만 양수라면 고유값도 둘 중 한 개만 양수\n",
+    "- 비대칭행렬에서는 pivot이 둘 다 양수여도 고유값은 아닐 수 있으니 주의!\n",
+    "- *the pivots and eigenvalues have matching signs,*\n",
+    "- *But to change sign, a real eigenvalue would have to cross zero.*\n",
+    "- *The matrix would at that moment be singular*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7da28aa-6259-46ad-9d65-f6c1b75f4b01",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "66a70918-ef08-4fcd-a693-8375ae268b0f",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### All Symmetric Matrices are Diagonalizable "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9021972e-1d7e-48fd-92f7-3dfe42717014",
    "metadata": {},
-   "source": []
+   "source": [
+    "- 어느 A의 고유값도 반복되지 않을 때, 고유벡터는 독립이 확실하다.\n",
+    "- 그러면 A는 대각화될 수 있다.\n",
+    "- 하지만 반복된 고유값은 고유벡터의 단점을 가질 수 있음\n",
+    "- 이건 비대칭 행렬에대해 일어나곤 함.\n",
+    "- 대칭 행렬에서는 절대 안 일어나는 일\n",
+    "- **There are always enough eigenvectors to diagonalize $A = A^T$.**"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "454cf992-9d58-4668-9ba4-d3d7d489fa2b",
    "metadata": {},
-   "source": []
+   "source": [
+    "Here is one idea for a proof. Change A slightly by a diagonal matrix $diag( c , 2c, ... , n c)$. If c is very small, the new symmetric matrix will have no repeated eigenvalues. Then we know it has a full set of orthonormal eigenvectors. As $c \\rightarrow 0$ we obtain n orthonormal eigenvectors of the original A-even if some eigenvalues of that A are repeated. "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c2142e7f-3c1a-48cc-bb78-77e7e5cbdffd",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Schur's Theorem**\n",
+    "- **Every square matrixfactors into $A=QTQ^{-1}$ where $T$ is upper triangular and $\\bar{Q}^{T} =Q-^{l.}$ If A has real eigenvalues then $Q$ and $T$ can be chosen real: $Q^T Q = I$**\n",
+    "- 임의의 복소수 정사각 행렬을 상삼각 행렬로 나타내는 행렬 분해\n",
+    "- ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05389c6f-c4e3-4c20-8da7-bd4a0ee20b65",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "613c1568-f864-4928-af9a-13affb33d270",
    "metadata": {},
-   "source": []
+   "source": [
+    "**REVIEW OF THE KEY IDEAS**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2035,9 +2122,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cd0f7f7-ed4e-42b4-a108-cb11d123bfe4",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8e24938-6722-4f3f-87aa-1a1303404c4d",
    "metadata": {},
-   "source": []
+   "source": [
+    "**WORKED EXAMPLES**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2047,9 +2144,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "561398e1-92ed-4507-8469-b1a997633777",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a9e19643-fc0e-456b-8cbc-2cd6765c41a6",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Problem Set 6.4**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2059,7 +2166,195 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93f45934-5c24-441e-ae1a-c9363568ef92",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12622678-e5ef-4f77-86ad-dbb235a248ea",
+   "metadata": {},
+   "source": [
+    "**Challenge Problems**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16bb80bb-f84b-423a-bbc9-91bedaf53db5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de9cfa0-3ba7-4e40-a59c-6742064e4bfd",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf62df6d-5c98-4f30-9bdb-eaa2f75cae4d",
+   "metadata": {},
+   "source": [
+    "### 6.5 Positive Definite Matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e69ad47-6e04-4b41-a40e-651ae2b0b3d6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d893379b-81ac-4e77-8b9f-95a997d1e216",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d9af6f3-4269-4236-a160-37ec249f1c0e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1ef5210-aa38-4478-a6d6-71b628bb7ced",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48386682-0936-4d4a-a166-f58c68fb1f53",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbae124-1fe0-4526-a88d-be69fd664ea4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e650b571-643d-4f45-ad76-a32faa243a1f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e93dd237-883d-4cf1-9704-467a45f9a393",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ca86f5c-e7c6-47ce-8047-976ebb6c9edb",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d730cb0-1317-4148-a048-4a7e87f77882",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6dfc104-f2ca-4974-b696-071d3547e91b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73530a11-a553-4fbf-bfb3-39973afcdf41",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b910905-8301-45e0-a3e2-879094b1fd4d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd10c826-519b-4937-9f78-efab6d30a34d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb288a4f-d9da-44ab-8a62-9184f53bb4c0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12d7e835-10cb-4c87-adee-e217e280bbd1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f4f640e-7002-49d3-a708-e7a929626030",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "807adf36-fa9b-46cd-a513-e0389a8bf331",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69120212-563d-40f5-a089-5e7a145234ee",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53f6fa09-0787-4b74-b395-5a683d9c5f51",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ab67f52-3496-4f1b-bb7a-3b7f2370d637",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0b759a-55c7-4c58-a23b-1e646ee9e067",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d663dd-53cd-4afe-87f6-c2436c7f2679",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9112e465-7cb9-485a-b41e-bb3b2fd3a2a1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d061382-4ba4-4d77-98d3-edc29f0971af",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22faf0c3-551e-4033-9407-8bd5d3ed3984",
    "metadata": {},
    "source": []
   },
