--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -2206,49 +2206,82 @@
    "cell_type": "markdown",
    "id": "7e69ad47-6e04-4b41-a40e-651ae2b0b3d6",
    "metadata": {},
-   "source": []
+   "source": [
+    "*This section concentrates on symmetric matrices that have positive eigenvalues.*\n",
+    "\n",
+    "*Symmetric matrices with positive eigenvalues are at the center of all kinds of applications. They are called **positive definite.***"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d893379b-81ac-4e77-8b9f-95a997d1e216",
    "metadata": {},
-   "source": []
+   "source": [
+    "Here are two goals of this section: \n",
+    "- To find quick tests on a symmetric matrix that guarantee positive eigenvalues. \n",
+    "- To explain important applications of positive definiteness."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8d9af6f3-4269-4236-a160-37ec249f1c0e",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{Start with 2 by 2 When does } A=\\begin{bmatrix}{a}&{b}\\\\{b}&{c}\\end{bmatrix} \\text{ have } \\lambda_1>0 \\text{ and } \\lambda_2>0?$$\n",
+    "\n",
+    "$$\\text{The eigenvalues of A are positive if and only if } a>0 \\text{ and } ac-b^2>0$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c1ef5210-aa38-4478-a6d6-71b628bb7ced",
    "metadata": {},
-   "source": []
+   "source": [
+    "Proof that the 2 by itest is passed when $\\lambda_l > 0$ and $|lambda_2 > O$. Their product $\\lambda_1 \\lambda_2$ is the determinant so $ac - b^2 > O$. Their sum is the trace so $a + c > O$. Then $a$ and $c$ are both positive (if one of them is not positive, $ac - b^2 > 0$ will fail)."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "48386682-0936-4d4a-a166-f58c68fb1f53",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{The eigenvalues of } A = A^T \\text{ are positive if and only if the pivots are positive:  } a>0 \\text{ and } \\frac{ac-b^2}{a}>0$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ebbae124-1fe0-4526-a88d-be69fd664ea4",
    "metadata": {},
-   "source": []
+   "source": [
+    "- $a > 0$은 위 두 test에서 모두 요구하는 조건!!\n",
+    "- 그래서 $ac>b^2$도 요구됨!\n",
+    "\n",
+    "$$\\begin{bmatrix}{1}&{b}\\\\{b}&{c}\\end{bmatrix} \\begin{matrix}{\\text{The first pivot is a}}\\\\{\\longrightarrow}\\\\{\\text{The multiplier is b/a}}\\end{matrix}\\begin{bmatrix}{a}&{b}\\\\{0}&{c-\\frac{b}{a}b}\\end{bmatrix}\\begin{matrix}{\\text{The second pivot is}}\\\\{c-\\frac{b^2}{a}=\\frac{ac-b^2}{a}}\\end{matrix}$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "e650b571-643d-4f45-ad76-a32faa243a1f",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Positive eigenvalues mean positive pivots and vice versa. 양수인 고유겂은 양수인 피벗을 의미하고 그 반대도 마찬가지!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61921c32-59e1-4c44-a00a-30b27145a5ab",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "e93dd237-883d-4cf1-9704-467a45f9a393",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Energy-based Definition"
+   ]
   },
   {
    "cell_type": "markdown",
