--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -2287,25 +2287,56 @@
    "cell_type": "markdown",
    "id": "1ca86f5c-e7c6-47ce-8047-976ebb6c9edb",
    "metadata": {},
-   "source": []
+   "source": [
+    "The new idea is that **$x^T A x$ is positive for all nonzero vectors x**, not just the eigen\u0002vectors. In many applications this number $x^T Ax (or \\frac{1}{2}x^TAx)$ is the **energy** in the system. The requirement of positive energy gives another definition of a positive definite matrix. I think this energy-based definition is the fundamental one."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9d730cb0-1317-4148-a048-4a7e87f77882",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Definition; A is positive definite if $x^TAx>0$ for every nonzero vector x**\n",
+    "$$x^TAx = \\begin{bmatrix}{x}&{y}\\end{bmatrix}\\begin{bmatrix}{a}&{b}\\\\{b}&{c}\\end{bmatrix}\\begin{bmatrix}{x}&{y}\\end{bmatrix}=ax^2 + 2bxy + cy^2 >0$$\n",
+    "\n",
+    "This energy-based definition leads to a basic fact: **If A and B are symmetric positive definite, so is A + B**\n",
+    "- Reason: The pivots and eigenvalues are not easy to follow when matrices are added, but the energies just add\n",
+    "\n",
+    "**If the columns of R are independent, then $A = R^T R$ is positive definite.**\n",
+    "- 여기서 $A = R^T R$은 square 이고 symmetric임\n",
+    "\n",
+    "The number $x^T Ax$ is the same as $x^T R^T Rx$. That is exactly $(Rx)^T(Rx)$-another important proof by parenthesis! That vector $Rx$ is not zero when $x \\neq 0$ (this is the meaning of independent columns). Then $x^TAx$ is the positive number $||Rx||^2$ and the matrix A is positive definite. "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c6dfc104-f2ca-4974-b696-071d3547e91b",
    "metadata": {},
-   "source": []
+   "source": [
+    "**When a symmetric matrix has one of these five properties, it has them all:**\n",
+    "1. All n pivots are positive.\n",
+    "2. All n upper left determinants are positive\n",
+    "    -  1 by 1, w by 2,... , n by n\n",
+    "3. All n eigenvalues are positive.\n",
+    "4. $x^TAx$ is positive except at x = 0 This is the **energy-based** definition.\n",
+    "5. A equals $R^TR$ for a matrix R with **independent columns**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5c64e6-6885-4e46-9516-84df992d0cb5",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "73530a11-a553-4fbf-bfb3-39973afcdf41",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex1)"
+   ]
   },
   {
    "cell_type": "markdown",
