--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -2342,31 +2342,67 @@
    "cell_type": "markdown",
    "id": "5b910905-8301-45e0-a3e2-879094b1fd4d",
    "metadata": {},
-   "source": []
+   "source": [
+    "A,B가 positive definiteness일때,\n",
+    "$$A=\\begin{bmatrix}{2}&{-1}&{0}\\\\{-1}&{2}&{-1}\\\\{0}&{-1}&{2}\\end{bmatrix} and,  B=\\begin{bmatrix}{2}&{-1}&{b}\\\\{-1}&{2}&{-1}\\\\{b}&{-1}&{2}\\end{bmatrix}$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fd10c826-519b-4937-9f78-efab6d30a34d",
    "metadata": {},
-   "source": []
+   "source": [
+    "- A의 pivot은 2, 3/2, 4/3 임! 모두 양수!\n",
+    "- 이것의 upper left determinants는 2,3,4이고 모두 양수!\n",
+    "- A 고유값은 $2-\\sqrt{2},2,2+\\sqrt{2}$로 모두 양수!\n",
+    "- $x^T Ax$도 양수! \n",
+    "$$x^T Ax=2(x_{1}^{2}-x_1x_2+x_{2}^{2}-x_2x_3+x_{3}^{2}=2(x_1-\\frac{1}{2}x_2)^2+\\frac{3}{2}(x_2-\\frac{2}{3}x_3)^2+\\frac{4}{3}(x_3)^2$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "cb288a4f-d9da-44ab-8a62-9184f53bb4c0",
    "metadata": {},
-   "source": []
+   "source": [
+    "- I have two candidates to suggest for $R$. Either one will show that $A = R^T$ R is positive definite. $R$ can be a rectangular first difference matrix, 4 by 3, to produce those second differences -1,2, -1 in $A$\n",
+    "    - 여기서 R의 세 개 열은 모두 독립이고, A는 positive definite이다.\n",
+    "    \n",
+    "- Another $R$ comes from $A = LDL^T$ (the symmetric version of $A = LU$). Elimination gives the pivots 2, 3/2, 4/3 in $D$ and the multipliers -1/2, 0, -2/3 in L. Just put $\\sqrt(D)$ with $L$. \n",
+    "$$LDL^T=(L\\sqrt{D})(L\\sqrt{D})^2=R^TR$$\n",
+    "    - 여기서 R은 Cholesky factor!!\n",
+    "    - 콜레스키 팩터는 MATLAB에서 $R=chol(A)$로 계산된다.\n",
+    "    - 정사각 R은 어떻게 A웅 만드는 방법이고, 이 콜레스키 R은 우리가 분해하는 방법이다.In applications, the rectangular R is how we build A and this Cholesky R is how we break it apart. \n",
+    "    \n",
+    "고유값은 대칭이 $R=Q\\sqrt{\\Lambda}Q^T$를 선택하게 한다. 또한 $R^TR=Q\\Lambda Q^T$도 성공적!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "12d7e835-10cb-4c87-adee-e217e280bbd1",
    "metadata": {},
-   "source": []
+   "source": [
+    "Now tum to B, where the (1,3) and (3,1) entries move away from 0 to b. \n",
+    "- b는 너무 크면 안 된다.\n",
+    "- The determinant test은 가장 쉽다.\n",
+    "- 1 by 1 determinant 은 2이고, 2 by 2 determinant은 여전히 3이다. 3 by 3 determinant는 0을 포함한다.\n",
+    "- $det B = 4+2b-2b^2 = (1 +b)(4-2b)$must be positive. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9960201d-6f94-46b1-9ebb-e6b7b522e4c4",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1f4f640e-7002-49d3-a708-e7a929626030",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Positive Semidefinite Matrices"
+   ]
   },
   {
    "cell_type": "markdown",
