--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -2370,7 +2370,7 @@
     "- Another $R$ comes from $A = LDL^T$ (the symmetric version of $A = LU$). Elimination gives the pivots 2, 3/2, 4/3 in $D$ and the multipliers -1/2, 0, -2/3 in L. Just put $\\sqrt(D)$ with $L$. \n",
     "$$LDL^T=(L\\sqrt{D})(L\\sqrt{D})^2=R^TR$$\n",
     "    - 여기서 R은 Cholesky factor!!\n",
-    "    - 콜레스키 팩터는 MATLAB에서 $R=chol(A)$로 계산된다.\n",
+    "    - 콜레스키 분해는 MATLAB에서 $R=chol(A)$로 계산된다.\n",
     "    - 정사각 R은 어떻게 A웅 만드는 방법이고, 이 콜레스키 R은 우리가 분해하는 방법이다.In applications, the rectangular R is how we build A and this Cholesky R is how we break it apart. \n",
     "    \n",
     "고유값은 대칭이 $R=Q\\sqrt{\\Lambda}Q^T$를 선택하게 한다. 또한 $R^TR=Q\\Lambda Q^T$도 성공적!"
@@ -2408,53 +2408,401 @@
    "cell_type": "markdown",
    "id": "807adf36-fa9b-46cd-a513-e0389a8bf331",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Often we are at the edge of positive definiteness.\n",
+    "- The determinant is zero.\n",
+    "- The smallest eigenvalue is zero.\n",
+    "- The energy in its eigenvector is $x^T Ax = x^TOX = O$.\n",
+    "- These matrices on the edge are called positive semidefinite."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "69120212-563d-40f5-a089-5e7a145234ee",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Positive semidefinite matrices have all $\\lambda > 0$ and all $x^T Ax > O$.\n",
+    "- Those weak inequalities (> instead of > ) include positive definite matrices and the singular matrices at the edge. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06262775-4658-4f1c-b476-f9652091c6d3",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "53f6fa09-0787-4b74-b395-5a683d9c5f51",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### First Application: The Ellipse $ax^2 + 2bxy + cy^2 = 1$ "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "7ab67f52-3496-4f1b-bb7a-3b7f2370d637",
    "metadata": {},
-   "source": []
+   "source": [
+    "$A = Q\\Lambda Q^{-l} = Q\\Lambda Q^T$:\n",
+    "1. The tilted ellipse is associated with A. Its equation is $x^T Ax = 1$. \n",
+    "2. The lined-up ellipse is associated with $\\Lambda$. Its equation is $X^T \\Lambda X = 1$. \n",
+    "3. The rotation matrix that lines up the ellipse is the eigenvector matrix $Q$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c70ecce2-4cde-45d7-abb2-15ccd34bfe5b",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "dd0b759a-55c7-4c58-a23b-1e646ee9e067",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "71d663dd-53cd-4afe-87f6-c2436c7f2679",
    "metadata": {},
-   "source": []
+   "source": [
+    "Find the axes of this tilted ellipse $5x^2 + 8xy + 5y^2 = 1$. "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9112e465-7cb9-485a-b41e-bb3b2fd3a2a1",
    "metadata": {},
-   "source": []
+   "source": [
+    "Solution\n",
+    "- Start with the positive definite matrix that matches this equation:\n",
+    "- 방정식은 $\\begin{bmatrix} {x}&{y} \\end{bmatrix} \\begin{bmatrix} {5}&{4}\\\\{4}&{5} \\end{bmatrix} \\begin{bmatrix} {x}\\\\{y} \\end{bmatrix} = 1$\n",
+    "- 행렬은 $A=\\begin{bmatrix}{5}&{4}\\\\{4}&{5}\\end{bmatrix}$\n",
+    "- 고유값은 9과 1\n",
+    "- 고유벡터는 $\\begin{bmatrix}{1}\\\\{1}\\end{bmatrix}$랑 $\\begin{bmatrix}{1}\\\\{-1}\\end{bmatrix}$\n",
+    "- 단위 벡터에 대해 $\\sqrt{2}$로 나누면 $A=Q\\Lambda Q^T$\n",
+    "- $x^TAx = 5x^2 + 8xy + 5y^2 = 9 \\big( \\frac{x+y}{\\sqrt{2}} \\big)^2 + 1 \\big( \\frac{x-y}{\\sqrt{2}} \\big)^2$\n",
+    "- 상관계수는 9와 1임(pivot 5와 9/5가 아니라)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "7d061382-4ba4-4d77-98d3-edc29f0971af",
    "metadata": {},
-   "source": []
+   "source": [
+    "**The axes of the tilted ellipse point along the eigenvectors.** \n",
+    "- This explains why $A = Q\\Lambda Q^T$ is called the \"principal axis theorem\"-it displays the axes.\n",
+    "- Not only the axis directions (from the eigenvectors) but also the axis lengths (from the eigenvalues). \n",
+    "- To see it all, use capital letters for the new coordinates that line up the ellipse:\n",
+    "    - $\\frac{x+y}{\\sqrt{2}}=X$ and $\\frac{x-y}{\\sqrt{2}}=Y$ and $9X^2+Y^2=1$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "22faf0c3-551e-4033-9407-8bd5d3ed3984",
+   "metadata": {},
+   "source": [
+    "- The bigger eigenvalue $\\lambda_1$ gives the shorter axis, of half-length $1 /\\sqrt{\\lambda_1}$ = 1/3. \n",
+    "- The smaller eigenvalue $\\lambda_2 = 1$ gives the greater length $1/\\sqrt{\\lambda_1} = 1.$ \n",
+    "- In the xy system, the axes are along the eigenvectors of A.\n",
+    "- In the XY system, the axes are along the eigenvectors of A-the coordinate axes\n",
+    "- All comes from $A = Q\\Lambda Q^T$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf9c86e0-6546-497a-bada-8c1cef7923c1",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "418791a5-e432-4c98-a83e-17eec84786bc",
+   "metadata": {},
+   "source": [
+    "**REVIEW OF THE KEY IDEAS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48af9eb6-606f-453f-88a3-267e04dc2cf2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9136bf6a-b1e1-4e5a-afa2-e9527cbc7859",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2976e28-b7c4-406e-a2db-900d9e808585",
+   "metadata": {},
+   "source": [
+    "**WORKED EXAMPLES**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427bee8f-b8f3-4335-9a1b-4046fc8c5d63",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d07ee3a-8b1c-44ec-8e78-cc3af09b5f7b",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca08f9d0-431b-44e4-9b9f-626917782592",
+   "metadata": {},
+   "source": [
+    "**Problem Set 6.5**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e45110bc-7cb9-4b4b-a56a-a43304dd40a8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b43bc6db-febc-4e66-8bfd-b7b166f0997b",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a3560a-fd1b-4b85-a233-cbdb2a290b75",
+   "metadata": {},
+   "source": [
+    "**Challenge Problems**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7095dd0-2e0e-47b7-b285-1353e8f63f17",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc4e7fe-8f08-4753-9f2b-32f3632836f9",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bffb9051-b1bf-4fbf-b09b-4f8af7de0ca5",
+   "metadata": {},
+   "source": [
+    "### 6.6 Similar Matrices "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d531dd5-a36c-4364-a6f1-a5acd2b9e369",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c04cd1c5-afcd-4a1a-ae35-e6757a64f452",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e2b3481-bbd4-4dc3-8531-747649dfd4df",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c2f72a-451c-430a-b404-7683018f4d06",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29a18bcc-69b3-4980-8087-39084286779e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2887e144-df9f-4fc4-8666-60eb998dc64e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0565eaae-ac6b-4af8-8c88-7319b3ffafaa",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac8a7f41-44f8-46c7-834d-64f5397772a4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98fb359d-36a3-4d69-9945-0ff8531082a1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13459456-a99f-470c-86a8-abbd4037a7e4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85201164-246e-41de-914d-5c11673ae7e9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eadb6951-6d4f-48e0-a467-0bedfe5113f8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d44aec2-5333-42ff-a525-fe0215367873",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85d91a1e-ced2-4270-8b0f-3416a8153462",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8c3bbe3-11c0-4edc-b5e4-5b70a26b3e9c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "331f6886-b4a3-49bd-b546-f451635c1730",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcf122cf-e97a-4837-b389-ab3c1336d018",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a531327b-039b-4b8a-a84b-aa97c9d4330a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bb50b80-f646-4c9b-a3a3-70ebad5e7463",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8358baca-c60a-4982-99f5-989eb40e6aa1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a1d9cd-4b38-4158-b145-c5e5a0f0d30b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0608c3cc-9f7f-4322-b0b0-494b49f11fa8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5550260b-e986-474e-89c2-546d2463c5f2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28add665-74ed-4702-bd2b-d247df1ce439",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f7f18d0-f44e-48bd-8b05-19746bf1c1a9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4900fe97-d1b2-4a51-bd8e-09632f3cd513",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a7847f-b21e-49d1-b142-8d5d07073bcd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "679baa86-2279-47b9-b0a3-e88629d4f0b5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad123da-7ef6-4ba7-959c-69db8d7df21c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73007bc1-889a-4237-b7c6-970626ab9651",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86d869fa-8848-4e7b-920c-6338287ec9a5",
    "metadata": {},
    "source": []
   },
