--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -2624,43 +2624,87 @@
    "cell_type": "markdown",
    "id": "8d531dd5-a36c-4364-a6f1-a5acd2b9e369",
    "metadata": {},
-   "source": []
+   "source": [
+    "**The key step in this chapter is to diagonalize a matrix by using its eigenvectors.**\n",
+    "- $S$는 고유벡터 행렬\n",
+    "- $S^{-1}AS$는 $\\Lambda$(고유값 행렬)\n",
+    "- 하지만 대각화는 모든 A에 대해 가능하진 않음\n",
+    "- 어떤 행렬은 고유벡터가 너무 작게 가지고 있기도 함\n",
+    "- 고유벡터 행렬 S는 위의 상황을 해결하기 위한 best choice이지만 지금 우리는 어느 역행렬 M이든 허용함(?) In this new section, the eigenvector matrix S remains the best choice when we can find it, but now we allow any invertible matrix M\n",
+    "- 어떤 M을 선택하든지간에 고유값은 같음!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c04cd1c5-afcd-4a1a-ae35-e6757a64f452",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{DEFINITION; Let M be all y invertible.matrlx. Then }B = M^{- 1} AM \\text{ is similar to }A.$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5e2b3481-bbd4-4dc3-8531-747649dfd4df",
    "metadata": {},
-   "source": []
+   "source": [
+    "If $B = M^{ -1} A M$ then immediately $A = M B M^{ -1}$. That means: If $B$ is similar to $A$ then $A$ is similar to $B$.\n",
+    "\n",
+    "대각화할 수 있는 행렬음 $\\Lambda$와 유사함.  In that special case M is S.\n",
+    "\n",
+    "We have $A = S\\Lambda ^{S-1}$ and $\\Lambda = S^{-1} AS$. **They certainly have the same eigenvalues!**"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "40c2f72a-451c-430a-b404-7683018f4d06",
    "metadata": {},
-   "source": []
+   "source": [
+    "$M^{-1}AM$은 differential equation에서 변수에 변화를 줄 떄 나타난다.\n",
+    "- $u=Mv$라고 하면,\n",
+    "- $\\frac{du}{dt}=Au$ 는 $M\\frac{dv}{dt}=AMv$가 되고, 그건 $\\frac{dv}{dy}=M^{-1}amV$임\n",
+    "- 원래 상관계수 행렬은 A였는데 새로운 상관계수 행렬은 $M^{-1}AM$임\n",
+    "- u가 v로 변하는 것은 유사한 행렬으로 이끄는 것과 같음\n",
+    "- 할상 u로 돌아갈 수 있기 때문에,\n",
+    "- 유사한 행렬은 같기 growth되거나 decay 해야한다. 더 자세하게 말하자면,A와 B의 고유값은 같다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "29a18bcc-69b3-4980-8087-39084286779e",
    "metadata": {},
-   "source": []
+   "source": [
+    "**(No .change in $\\Lambda$'s) Similar matrices A and $M^{-1}$ have the same eigenvalues. If x is an eigenvector of A, $M^{-1}x$ is an eigenvector of $=M^{-1}AM$.**\n",
+    "- The proof is quick, since $B = M^{-1} AM$ gives $A = MBM^{- 1}$. Suppose $Ax = \\lambda X$:\n",
+    "    - $MBM^{-1}x=\\lambda x$ means that $B(M^{-1}x)=\\lambda(M^{-1}x)$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "2887e144-df9f-4fc4-8666-60eb998dc64e",
    "metadata": {},
-   "source": []
+   "source": [
+    "The eigenvalue of $B$ is the same $\\lambda$.\n",
+    "\n",
+    "The eigenvector has changed to $M^{-1}x$. \n",
+    "\n",
+    "Two matrices can have the same repeated $\\lambda$, and fail to be similar-as we will see"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80b619a6-a283-42be-bd2d-09c67f2b3203",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0565eaae-ac6b-4af8-8c88-7319b3ffafaa",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex1)"
+   ]
   },
   {
    "cell_type": "markdown",
