--- a/_notebooks/2022-01-05-AI_music.ipynb
+++ b/_notebooks/2022-01-05-AI_music.ipynb
@@ -21,17 +21,91 @@
    "cell_type": "markdown",
    "id": "34a6504b-389b-49f2-9ce4-d6cb60499933",
    "metadata": {},
-   "source": []
+   "source": [
+    "음악시장에서의 AI\n",
+    "작곡하는 영역에서 많이 들어감.\n",
+    "노래하는 영역에서도 많이 들어감.\n",
+    "\n",
+    "가상인간이 노래부르고, 작곡하는 것을 인공지능이 할 수 있지 않나!\n",
+    "\n",
+    "음악이 쓰임새가 많아진 요즘\n",
+    "예전: 노래를 하는 등 특별한 상황\n",
+    "지금; 배경음악에 가까운 음악.\n",
+    " -> 유튜브! \n",
+    " -> 영상 올리고 싶은데 배경음악을 깔고 싶음.\n",
+    " -> 하지만 저작권 떄문에 어려움\n",
+    " -> 적당한 음악 찾기도 어렵고, 저작권도 문제고.\n",
+    " -> 음악의 수요가 커짐\n",
+    " \n",
+    "다양하게 빠르게 음악을 만들어야 하는 환경이 형성됨\n",
+    "\n",
+    "영상에 쓰이는 음원을 찾는 것도 인공지능이 하는 세대\n",
+    "-> 영상을 통으로 올리면 음악을 찾아주는 거도 있긴 하지만.\n",
+    "-> 화면을 캡쳐한 것을 보고 특징(밝은 슬픔) 등의 분위기를 찾아서 음악을 찾아주기도 함\n",
+    "-> 이거는 남이 만든 음악 중에 골라주는 거\n",
+    "\n",
+    "작곡을 해는 인공지능 등장\n",
+    "- 음악을 흥얼거리기만해도 작곡을 하기 시작.\n",
+    "- 2016년부터 서비스 등장하기 시작, 하지만 전문적인 영역으로는 어려움을 겪음\n",
+    "- 다른 곳에서 힘을 발휘\n",
+    "- 샘플링이 중요한 힙합 시장, \n",
+    "- 수많은 비트들을 차용하는 힙합시장.\n",
+    "- 코드를 고르고, bpm, beat 다 골라서 조화를 통해 샘플링 많이 해놓고 실제 사람이 고름.\n",
+    "\n",
+    "\n",
+    "특정 유명 작곡가의 음원을 학습해서 그 풍으로 음악을 만들기도 함\n",
+    "- 에밀리 하웰이 모짜르트의 곢을 흉내내는 곡을 만들어 배틀하기도.\n",
+    "\n",
+    "작풍을 고를 수도 있음. \n",
+    "- 클래식 작곡가를 다 펼쳐놓고, \n",
+    "- 베토벤 스러우면서 쇼팽스러운 음악을 만드는..\n",
+    "\n",
+    "음원을 오롯이 부리기엔 아직 부족.\n",
+    "- 인공지능잉 초안을 만들면 사람이 정리하는 방식으로 진행되는 요즘\n",
+    "- 국내 드라마 OST 에 이미 도입됨\n",
+    "- AI 창작 동요 _ 기존의 패턴을 캐치해 동요 만드는\n",
+    "- AI 작곡가 이봄(EvoM)\n",
+    "    - 이봄은 진화음악(Evolutionary Music)이란 뜻이 담긴 이름을 가진 AI 작곡가다.\n",
+    "\n",
+    "뺏기는 것일까..\n",
+    "- 작곡가들도 빈익빈 부익부..\n",
+    "- 그 점에서 AI가 단점만이 존재할까.\n",
+    "\n",
+    "다양한 소리의 패턴을 인공지능이 도와주니까 더 창의적인 노래가 생성될 수도\n",
+    "- 음악 방식 자체가 달라질 수도\n",
+    "- 작곡이란, 상상이 아니라 듣는 것이다라는 표현이 나올 정도..\n",
+    "     - 창의적이지 않아도 부지런하면(많이 들으면) 돈 벌 수 있..\n",
+    "     \n",
+    "최근 국내 무명 힙합가수들이 수억을 버는 현상\n",
+    "- 예전과 음악을 만든드는 방식이 달라짐.\n",
+    "- 팀으로 일하던 예전과 달리 지금은 인공지능(노트북 등))과 작곡가 그 자신만 있어서 이익을 나누지 않아도 되는 현상\n",
+    "    - 빌리 아일리시 _ 홈 레코딩을 통해 노래를 내 큰 이익을 남겼지..\n",
+    "    \n",
+    "    \n",
+    "크레이터 이코노미\n",
+    "- 창의력이 있고 능력이 있으면 먹고 살 수 있는 기술을 만들어준 디지털 기술\n",
+    "\n",
+    "저작권료 문제\n",
+    "- 인공지능이 만들었냐? 사람이 만들었냐? 정확한 정의가 없..\n",
+    "- 이것은 풀어야 할 숙제.\n",
+    "- 인공지능이 거의 다 만들어도 사람 손을 조금만 거치면 사람 것이 되가는 구조."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "391a72fe-0f91-4600-a813-b0a639a2055f",
+   "metadata": {},
+   "source": [
+    "> https://pozalabs.com/"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc0b027-2a75-472c-bcaf-da73e499b3f0",
+   "id": "6c8079b6-513a-46b8-bb5e-12851092e6d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "https://www.mk.co.kr/news/it/view/2021/06/538404/"
-   ]
+   "source": []
   }
  ],
  "metadata": {
